<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/exampleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/example"
        android:layout_centerHorizontal="true"
        android:padding="5dp"/>
    
    <com.example.chuyutongcs639hw4.CircleAnimationView
        android:id="@+id/exampleCircleView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:circleColor="#000"
        app:circleRadius="10dp"
        app:circleSpeed="5dp"
        android:layout_below="@id/exampleText"/>

    <TextView
        android:id="@+id/createYourOwnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/create_your_own"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/exampleCircleView"
        android:padding="5dp"/>

    <view class="android.support.v7.widget.RecyclerView"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scrollbars="none"
        android:layout_below="@+id/createYourOwnText"
        android:layout_above="@id/createCreationInterface">

    </view>

    <RelativeLayout
        android:id="@+id/createCreationInterface"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/radiusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:layout_alignBottom="@+id/radiusEditText"
            android:layout_alignTop="@+id/radiusEditText"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/radiusEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/radiusText"
            android:digits="0123456789"
            android:inputType="number"/>

        <TextView
            android:id="@+id/speedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_toStartOf="@+id/speedEditText"
            android:layout_alignBottom="@+id/speedEditText"
            android:layout_alignTop="@+id/speedEditText"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/speedEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:digits="0123456789"
            android:inputType="number"/>
        <TextView
            android:id="@+id/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:layout_below="@+id/radiusText"
            android:layout_alignTop="@+id/addButton"
            android:layout_alignBottom="@+id/addButton"
            android:gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/colorText"
            android:layout_alignTop="@+id/addButton"
            android:layout_alignBottom="@id/addButton"
            android:gravity="center_vertical"
            >
            <ImageView
                android:padding="2dp"
                android:id="@+id/color1"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/addButton"
                android:src="#f08890" />
            <ImageView
                android:padding="2dp"
                android:id="@+id/color2"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/addButton"
                android:src="#0f0876" />
            <ImageView
                android:padding="2dp"
                android:id="@+id/color3"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/addButton"
                android:src="#058904" />
            <ImageView
                android:padding="2dp"
                android:id="@+id/color4"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/addButton"
                android:src="#0589f4" />

            <ImageView
                android:padding="2dp"
                android:id="@+id/color5"
                android:layout_marginStart="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/addButton"
                android:src="#f0893f"
                />



        </LinearLayout>



        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speedEditText"
            android:layout_alignParentEnd="true"
            android:text="@string/add"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/speedControlInterface"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/speedText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/currentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/minusButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/plusButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>




</RelativeLayout>